@@ -1,5 +1,13 @@
 TODO list and scratch pad for Fragmentarium. /Mikael
 -----------
+- Add UI for Tile render
+- Timeline for $time animations.
+- SpotLight should be screen-space oriented
+  - Change slider (2D slider?)
+- Colors should be lightened...
+- Should 
+
+Update web:
 Install Qt 4.7.1.
 Set the QT4DIR environment variable to the Qt installation directory (Typically: C:\Qt\4.7.1)
 Open the Fragmentarium.sln Visual Studio 2008 solution file (located in the 'Build - Windows' dir).
@@ -15,20 +23,5 @@ Now Fragmentarium should run from inside Visual Studio, but it will not find its
 It is possible to create a deployable ....
 ------------
 
-
-#camera 3D
-uniform vec3 from,to,fromDx,fromDy,toDx,toDy;
-
-#camera 2D
-uniform vec2 coord,pixelSize;
-
-// Other magic uniforms
-uniform float time;
-
-#include ".frag"
-
-#includeonly ".frag"
-
-#replace "de (vec3" "de2 (vec3"
-
-#info made by createtw 
+Tips & Tricks:
+GPU Timeout
